# broccoli

./: Cargo.toml
.github/workflows/: integ_tests.yaml
broccoli-cli/: .env  Cargo.toml
broccoli-cli/src/: lib.rs  main.rs
broccoli-queue/: Cargo.toml
broccoli-queue/examples/: consumer.rs
broccoli-queue/src/: error.rs  queue.rs
broccoli-queue/src/brokers/: connect.rs  management.rs  mod.rs
broccoli-queue/src/brokers/rabbitmq/: broker.rs  management.rs  mod.rs
broccoli-queue/src/brokers/redis/: broker.rs  management.rs  mod.rs
broccoli-queue/tests/: edge_cases.rs
src/: queue.rs
src/brokers/: broker.rs
src/brokers/rabbitmq/: broker.rs  utils.rs
src/brokers/redis/: broker.rs  utils.rs
src/brokers/surrealdb/: broker.rs
tests/: happy_path.rs
