[package]
name = "broccoli-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Broccoli queues"

[dependencies]
broccoli_queue = { path = "../broccoli-queue", features = [
    "redis",
    "rabbitmq",
    "management",
] }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
redis = { version = "0.27.5", features = ["tokio-rustls-comp"] }
serde_json = "1.0.108"
anyhow = "1.0"
thiserror = "2.0.11"
dotenv = "0.15.0"
prettytable = "0.10.0"
